idea/testData/multiModuleLineMarker/fromClassToAlias/common/common.kt
expect class <!LINE_MARKER("descr='Has actuals in JVM'")!>Header<!> {

}

